# ChangeLog for sci-mathematics/libsfmt
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Jun 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +libsfmt-1.3.0.ebuild:
  Initial import, ebuild by Perttu Luukko, bug #227851
